--- a/src/toastify.css
+++ b/src/toastify.css
@@ -6,13 +6,13 @@
  * Copyright (C) 2018 Varun A P
  */
 
-.toastify {
+ .toastify {
     padding: 12px 20px;
     color: #ffffff;
     display: inline-block;
     box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.12), 0 10px 36px -4px rgba(77, 96, 232, 0.3);
-    background: -webkit-linear-gradient(315deg, #73a5ff, #5477f5);
-    background: linear-gradient(135deg, #73a5ff, #5477f5);
+    background: rgb(41, 41, 41);
+    background: rgb(41, 41, 41);
     position: fixed;
     opacity: 0;
     transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
